--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -1,11 +1,22 @@
-steps:
-- uses: actions/checkout@v4
-- uses: actions/setup-node@v4
-  with:
-    node-version: 16
-- name: Initialize CodeQL
-  uses: github/codeql-action/init@v2
-  with:
-    languages: python
-- name: Perform CodeQL Analysis
-  uses: github/codeql-action/analyze@v2
+on:
+  pull_request:
+    paths-ignore:
+      - '**.md'
+  push:
+    branches:
+      - main
+
+jobs:
+  scan:
+    runs-on: ubuntu@latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 16
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: python
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
