--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -22,9 +22,9 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: go,javascript
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+    #- name: Autobuild
+    #  uses: github/codeql-action/autobuild@v2
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:javascript"
+      #with:
+      #  category: "/language:javascript"
