--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   scan:
     strategy:
+      fail-fast: false
       matrix:
         version: [2.14.4, 2.14.5, 2.14.6, 2.15.0, 2.15.1, 2.15.2, 2.15.3]
     runs-on: ubuntu-latest
