--- a/.github/workflows/scan-go-and-py.yml
+++ b/.github/workflows/scan-go-and-py.yml
@@ -19,12 +19,9 @@ jobs:
       security-events: write
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 16.19.0
     - run: |
-        which node
-        node --version
+        which python3
+        python3 --version
         echo $PATH
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
